# Co-movement-Pattern-Mining-from-Videos

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cmd.sh  main.cpp  query.h  result.h  script.sh  utils.h
AprioriBaseline/: CMakeLists.txt  HeadFiles.h  TestDemo.h  Utils.h  customizMap.h  main.cpp
CMCBaseline/: CMC_beta.h  CMakeLists.txt  main.cpp  testdemo.h  utils.h
CP-tree/: CMakeLists.txt  baseline.h  main.cpp  result.h
CP-tree/Offline/: cluster.h  query.h  tree.h
SequenceAheadMining/: main.cpp  query.h  utils.h
SequenceAheadMining/algorithm/: cluster.h  mining_base.h  mining_sw.h  result.h  tree.h
Streaming/: baseline_ext.h  input_handler.h  main.cpp  miner.h  structs.h
Streaming/Offline/: mining_sw.h  position.h  result.h
TCS-tree/: CMakeLists.txt  query.h  utils.h
TCS-tree/datasets/: readme.txt
algorithm/: mining_base.h  result.h
algorithm1/: cmc_mining.h  cmc_query.h  cmc_tree.h  group.h
algorithm2/: cluster.h  position.h  st_mining1.h  st_mining2.h  st_query.h  tree.h
